--- a/todo.txt
+++ b/todo.txt
@@ -1,20 +1,20 @@
-Events:
-
+Events:  ?
+widok z wieloma zadaniami
 wydarzenia które minęły nie będą się domyślnie pokazywać
 ale można będzie do nich wrócić
-po wybraniu widoku przechodzi do pola edycji wydarzenia
 
+Event:
+kilka eventow mozna dodac
+jedno, powtarzalne wydarzenie np urodziny co roku są
 
 Calendar:
-widok trzeba generować częściami a nie po całości - widok2
-dostosowac do 1 widoku gdy dni sie powtarzaja
-+/- dodatkowy widok gdzie są tylko dni z tego miesiąca
-zaznacza aktualny dzień
-można przechodzić między dniami
-można z tego widoku przejść do pola edycji wydarzenia
-
+przeniesc widok z menu.py
+ctrl + strzalka daje kolejny miesiac
 
 Notepad:
-
 stworzyć
 niech ma podpowiedzi - jeśli jedna literka się nie zgadza - to jest nie tworzy żadnego słowa z bazy to wtedy niech poprawi na jakieś
+
+Menu:
+wybor 3.moduł do zrozbienia 4.wydarzenia
+
